Deploy/k8s/2-react-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-landing-app-service
  namespace: dev
  labels:
    app: react-landing-app
spec:
  selector:
    app: react-landing-app
  ports:
    - port: 3000
      targetPort: 8080
