Deploy/k8s/3-react-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-landing-app-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: react-landing-app
spec:
  ingressClassName: nginx
  rules:
    - host: panchanandevops.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: react-landing-app-service
                port:
                  number: 3000
